--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
+        "@ttskch/select2-bootstrap4-theme": "^1.3.2",
         "bulma": "^0.8.2",
         "ckeditor4": "^4.14.0"
     }
