--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
-        "laravel-mix": "^2.0",
+        "laravel-mix": "^5.0.4",
         "lodash": "^4.17.5",
         "popper.js": "^1.12",
-        "vue": "^2.5.7"
+        "resolve-url-loader": "^3.1.0",
+        "sass": "^1.26.5",
+        "sass-loader": "^8.0.2",
+        "vue": "^2.5.7",
+        "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
         "@ttskch/select2-bootstrap4-theme": "^1.3.2",
         "bulma": "^0.8.2",
-        "ckeditor4": "^4.14.0"
+        "ckeditor4": "^4.14.0",
+        "ckeditor4-vue": "^0.2.0"
     }
 }
