add select component

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=071d191fd897f42533ba",
+    "/js/app.js": "/js/app.js?id=1abf6523a171206128cb",
     "/css/app.css": "/css/app.css?id=f381ed76ff9452857b84",
+    "/css/vue-multiselect/dist/vue-multiselect.min.css": "/css/vue-multiselect/dist/vue-multiselect.min.css?id=852f8d3449dafd2df542",
     "/css/all.css": "/css/all.css?id=0e916dda6295e62e3953"
 }
