--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@ttskch/select2-bootstrap4-theme": "^1.3.2",
         "bulma": "^0.8.2",
         "ckeditor4": "^4.14.0",
-        "ckeditor4-vue": "^0.2.0"
+        "ckeditor4-vue": "^0.2.0",
+        "vue-multiselect": "^2.1.6"
     }
 }
